--- a/Backjoon/Backjoon/Backjoon/Backjoon.vcxproj.filters
+++ b/Backjoon/Backjoon/Backjoon/Backjoon.vcxproj.filters
@@ -69,5 +69,26 @@
     <ClCompile Include="0412\Backjoon2231.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="0413\Backjoon19532.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0413\Backjoon1018.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0413\Backjoon1436.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0414\Backjoon2839.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0414\Backjoon10989.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0401\Backjoon11382.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0401\Backjoon8393.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
